Closed Bug 1106423 Opened 11 years ago Closed 11 years ago

Animated GIF is corrupt / badly rendered

Categories

(Core :: Graphics: ImageLib, defect)

defect
Not set
minor

Tracking

()

VERIFIED FIXED
mozilla37
Tracking Status
firefox35 --- unaffected
firefox36 + fixed
firefox37 + fixed
b2g-v2.2 --- fixed

People

(Reporter: stevee, Assigned: seth)

References

()

Details

(Keywords: regression)

Attachments

(1 file)

1. New profile, start Firefox. 2. Navigate to http://imgur.com/gallery/aaywDJH 3. Observe Brian doing the peanut butter jelly dance Expected: - Properly rendered animation with no black artifacts Actual: - Malrendered, corrupt animation I don't know if the .GIF is bad, but IE11 renders it properly, as does Firefox 28.
[Tracking Requested - why for this release]: [Tracking Requested - why for this release]: Regression window(m-i) Good: https://hg.mozilla.org/integration/mozilla-inbound/rev/4553524f671f Mozilla/5.0 (Windows NT 6.1; WOW64; rv:36.0) Gecko/20100101 Firefox/36.0 ID:20141126130824 Bad: https://hg.mozilla.org/integration/mozilla-inbound/rev/7ee7e774e19f Mozilla/5.0 (Windows NT 6.1; WOW64; rv:36.0) Gecko/20100101 Firefox/36.0 ID:20141126132236 Pushlog: https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=4553524f671f&tochange=7ee7e774e19f Regressed by: bug 1057904, bug 1060869
Blocks: 1057904, 1060869
Flags: needinfo?(seth)
Thanks for tracking down the regression range, Alice0775! It looks like bug 1057904 part 1 is the culprit. The fix is straightforward and it actually makes the code simpler.
Attachment #8530953 - Flags: review?(tnikkel)
Assignee: nobody → seth
Status: NEW → ASSIGNED
This will need an uplift to Aurora, as well.
Flags: needinfo?(seth)
Attachment #8530953 - Flags: review?(tnikkel) → review+
OS: Windows 7 → All
Hardware: x86_64 → All
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla37
Comment on attachment 8530953 [details] [diff] [review] Always use raw frames in DoBlend Approval Request Comment [Feature/regressing bug #]: 1057904 [User impact if declined]: Busted animted GIFs. [Describe test coverage new/current, TBPL]: This should've been caught by existing tests, but they're disabled due to another bug. =( They'll be reenabled soon though. The patch has been on central since this morning. [Risks and why]: Low risk; this makes the code more similar to how it was pre-bug 1057904. [String/UUID change made/needed]: None.
Attachment #8530953 - Flags: approval-mozilla-aurora?
Attachment #8530953 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:37.0) Gecko/20100101 Firefox/37.0 ID:20141205030202 CSet: 29d086b32a26 -->VERIFIED on latest windows trunk.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: