Bug 1106423 - Always use raw frames in DoBlend. r=tn, a=sledru